# alWeather

./: LICENSE  README.md  pyproject.toml  requirements.txt  weather_app.py
.github/workflows/: ci.yml  publish.yml
PythonProject1/: 100 days.py
PythonProject2/: swap.py
PythonProject4/: int.py
PythonProject6/: day2.py
tests/: test_weather_app.py
var1/: day2.py  day3.py  input.py
web/: app.py
web/templates/: index.html
